--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,12 @@ section{
 h2{
   font-size: 2rem;
   text-align: center;
-  padding: 1.5rem 1rem 0 1rem;
+  margin: 0;
+  padding: 2rem;
+}
+
+.group-container{
+  padding: 0 5rem;
 }
 
 .guitar-container, .accessory-container{
@@ -63,8 +68,20 @@ h2{
   padding: 0.5rem
 }
 
+.description{
+  padding: 0 5rem;
+}
+
+.image-container{
+  margin-bottom: 1rem;
+}
+
 .guitar-image, .accessory-image{
   height: 25rem;
+}
+
+span{
+  font-weight: 700;
 }
 
 form{
@@ -84,3 +101,39 @@ form{
   cursor: pointer;
 }
 
+@media only screen and (min-width: 1280px) {
+  .group-container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    gap: 5rem;
+    width: 100%;
+  }
+
+  .guitar-container, .accessory-container{
+    width: 45%;
+    padding: 3rem;
+  }
+
+  .guitar-title, .accessory-title{
+    margin: 0;
+  }
+
+  .description{
+    text-align: justify;
+    margin: 0;
+    padding: 1rem;
+  }
+
+  .image-container{
+    width: 28rem;
+    height: 28rem;
+    overflow: hidden;
+  }
+
+  .image-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
